--- a/css/style.scss
+++ b/css/style.scss
@@ -524,3 +524,45 @@ footer {
         }
     }
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 800px;
+
+    img {
+        position: absolute;
+        z-index: 4000;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        &::before {
+            height: 10px;
+            width: 10px;
+            background: red;
+        }
+    }
+    #close {
+        position: relative;
+        z-index: 5000;
+        color: white;
+        font-size: 40px;
+        opacity: 50%;
+        margin: 3%;
+        transition: color 0.6s;
+
+        &:hover {
+            color: rgb(194, 194, 194);
+        }
+    }
+}
+
+
+.active {
+    display: flex;
+    cursor: pointer;
+}
