--- a/css/style.css
+++ b/css/style.css
@@ -729,7 +729,7 @@ footer .footer__container__list ul {
   color: #c2c2c2;
 }
 
-.active {
+.active__modal {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
