--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,19 @@ header .header__container .navbar__list__li:hover {
           transform: scale(1.1);
 }
 
+header .header__container .navbar__burger {
+  display: none;
+}
+
+header .header__container .navbar__burger span {
+  display: block;
+  position: relative;
+  height: 2px;
+  width: 25px;
+  background: #000;
+  margin: 5px 0;
+}
+
 header .header__content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -708,12 +721,6 @@ footer .footer__container__list ul {
           transform: translate(-50%, -50%);
 }
 
-.modal img::before {
-  height: 10px;
-  width: 10px;
-  background: red;
-}
-
 .modal #close {
   position: relative;
   z-index: 5000;
@@ -734,5 +741,51 @@ footer .footer__container__list ul {
   display: -ms-flexbox;
   display: flex;
   cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+  header .header__container .navbar__list {
+    left: 1000px;
+    top: -20%;
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%);
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: absolute;
+    background-color: #bcbcbc;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 20px;
+    border-radius: 10px;
+  }
+  header .header__container .navbar__list li {
+    padding-bottom: 20px;
+    font-size: 20px;
+  }
+  header .header__container .navbar__burger {
+    display: block;
+    cursor: pointer;
+  }
+  header .header__container .navbar .active__burger {
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+  }
+  header .header__container .navbar .active__burger span:nth-child(1) {
+    -webkit-transform: rotate(-45deg) translate(-6px, 6px);
+            transform: rotate(-45deg) translate(-6px, 6px);
+  }
+  header .header__container .navbar .active__burger span:nth-child(2) {
+    opacity: 0;
+  }
+  header .header__container .navbar .active__burger span:nth-child(3) {
+    -webkit-transform: rotate(45deg) translate(-4px, -4px);
+            transform: rotate(45deg) translate(-4px, -4px);
+  }
 }
 /*# sourceMappingURL=style.css.map */
