--- a/css/style.scss
+++ b/css/style.scss
@@ -551,6 +551,13 @@ footer {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        opacity: 0;
+        transition: opacity 0.5s;
+    }
+
+    .active__img {
+        opacity: 1;
+        transition: opacity 0.5s;
     }
     #close {
         position: relative;
