--- a/css/style.scss
+++ b/css/style.scss
@@ -146,7 +146,7 @@ header {
             justify-content: center;
             flex-direction: column;
             padding-left: 100px;
-            width: 960px;
+            max-width: 960px;
             
             #design {
                 padding-bottom: 30px;
@@ -211,11 +211,11 @@ header {
         }
 
         &__img {
-            width: 960px;
+            max-width: 960px;
             height: 570px;
 
             img {
-                width: 960px;
+                max-width: 960px;
                 height: 570px;
             }
         }
@@ -299,6 +299,11 @@ header {
             color: #787878;
             line-height: 28px;
         }
+    }
+
+    #vimeo {
+        width: 1170px;
+        height: 570px;
     }
 }
 
@@ -553,6 +558,7 @@ footer {
         transform: translate(-50%, -50%);
         opacity: 0;
         transition: opacity 0.5s;
+        width: 800px;
     }
 
     .active__img {
@@ -587,7 +593,12 @@ footer {
     header {
         .header__container {
             .navbar {
+                #logo {
+                    width: 30px;
+                    height: 25px;
+                }
                 &__list {
+                    display: none;
                     left: 1000px;
                     top: -20%;
                     transform: translateY(100%);
@@ -626,6 +637,99 @@ footer {
                         }
                     }
                 }
+            }
+        }
+
+        .header__content {
+            text-align: center;
+        }
+
+
+    }
+
+    .about {
+        &__skills {
+            flex-direction: column;
+
+            &__text {
+                padding: 50px 0;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+            }
+
+            &__img {
+                display: none;
+            }
+        }
+
+        &__icons {
+            padding: 0 50px;
+
+            img {
+                height: 40px;
+            }
+
+            &__1 {
+                display: flex;
+                align-items: center;
+                font-size: 14px;
+
+                &__content {
+                    margin-left: 15px;
+                }
+            }
+        }
+
+        &__images {
+            &__content {
+                &__row {
+                    display: block;
+                    text-align: center;
+
+                    &__img {
+                        width: 350px;
+                        height: 250px;
+                    }
+                }
+            }
+        }
+    }
+
+    .modal {
+        width: 650px;
+
+        img {
+            width: 650px;
+        }
+    }
+
+    .process {
+        #vimeo {
+            width: 700px;
+            height: 390px;
+        }
+    }
+
+    .services {
+        padding: 50px 0;
+        &__content {
+            &__block {
+                h4 {
+                    padding: 15px 0;
+                }
+            }
+        }
+    }
+
+    footer {
+        padding: 0 20px;
+        font-size: 14px;
+
+        .footer__container__list {
+            ul {
+                margin-right: 20px;
             }
         }
     }
