--- a/css/style.scss
+++ b/css/style.scss
@@ -97,22 +97,20 @@ header {
                 line-height: 28px;
             }
 
-            span {
-                background-color: #10c9c3;
-                padding: 20px 45px;
-                transition: background-color 0.6s;
-
-                a {
-                    text-decoration: none;
-                    color: #ffffff;
-                    font-size: 12px;
-                }
+            a {
+                text-decoration: none;
+                color: #ffffff;
+                font-size: 12px;
+                background:  #10c9c3;
+                padding: 20px 40px;
+                cursor: pointer;
+                transition: background 0.6s;
 
                 &:hover {
-                    background-color: #11b6b0;
-                    cursor: pointer;
+                    background:  #0fb3ad;
                 }
             }
+
         }
     }
 }
