--- a/css/style.css
+++ b/css/style.css
@@ -468,7 +468,6 @@ header .header__content__text a:hover {
           animation-name: fade;
   -webkit-animation-duration: 0.6s;
           animation-duration: 0.6s;
-  padding-bottom: 110px;
 }
 
 @-webkit-keyframes fade {
@@ -491,6 +490,7 @@ header .header__content__text a:hover {
 
 .testimonials__content__dots {
   text-align: center;
+  margin-top: 110px;
 }
 
 .testimonials__content__dots .active {
@@ -936,6 +936,43 @@ footer .footer__container__list ul {
   }
   .about__skills__text #marketing:after {
     width: 168px;
+  }
+  .about__icons {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    padding: 20px 0;
+  }
+  .about__icons__1 {
+    width: 200px;
+  }
+  .about__images__content__row__img {
+    width: 300px;
+    height: 200px;
+  }
+  .process #vimeo {
+    width: 380px;
+    height: 300px;
+  }
+  .testimonials__content__dots {
+    margin-top: 50px;
+  }
+  .testimonials__content__dots__item {
+    height: 10px;
+    width: 10px;
+    margin: 0 2px;
+  }
+  .modal {
+    width: 400px;
+  }
+  .modal img {
+    width: 400px;
   }
 }
 /*# sourceMappingURL=style.css.map */
