--- a/css/style.scss
+++ b/css/style.scss
@@ -362,7 +362,6 @@ header {
         &__item {
             animation-name: fade;
             animation-duration: 0.6s;
-            padding-bottom: 110px;
 
             @keyframes fade {
                 from {
@@ -376,6 +375,7 @@ header {
 
         &__dots {
             text-align: center;
+            margin-top: 110px;
 
             .active {
                 background-color: white;
@@ -824,6 +824,58 @@ footer {
                     }
                 }
             }
+        }
+
+        &__icons {
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+            padding: 20px 0;
+
+            &__1 {
+                width: 200px;
+            }
+        }
+
+        &__images {
+            &__content {
+                &__row {
+                    &__img {
+                        width: 300px;
+                        height: 200px;
+                    }
+                }
+            }
+        }
+    }
+
+    .process {
+        #vimeo {
+            width: 380px;
+            height: 300px;
+        }
+    }
+
+    .testimonials {
+        &__content {
+            }
+            &__dots {
+
+                margin-top: 50px;
+                &__item {
+                    height: 10px;
+                    width: 10px;
+                    margin: 0 2px;
+                }
+            }
+        }
+    }
+
+    .modal {
+        width: 400px;
+
+        img {
+            width: 400px;
         }
     }
 }
