--- a/css/style.css
+++ b/css/style.css
@@ -956,17 +956,57 @@ footer .footer__container__list ul {
     width: 300px;
     height: 200px;
   }
+  .process {
+    padding: 80px 0;
+    height: 100%;
+  }
   .process #vimeo {
     width: 380px;
     height: 300px;
   }
+  .services {
+    height: 100%;
+  }
+  .services__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .services__content__block {
+    margin-top: 50px;
+  }
+  .testimonials {
+    height: 950px;
+    position: relative;
+  }
   .testimonials__content__dots {
+    position: absolute;
+    width: 100%;
+    top: 40%;
+    left: 50%;
+    -webkit-transform: translate(-51%, -50%);
+            transform: translate(-51%, -50%);
     margin-top: 50px;
   }
   .testimonials__content__dots__item {
     height: 10px;
     width: 10px;
     margin: 0 2px;
+  }
+  .testimonials__companies {
+    padding: 0 50px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 100px 100px;
+        grid-template-columns: 100px 100px;
+    -ms-grid-rows: 200px 200px;
+        grid-template-rows: 200px 200px;
+    gap: 25px 50px;
+        grid-template-areas: ". ." ". .";
+  }
+  .testimonials__companies img {
+    width: 100px;
   }
   .modal {
     width: 400px;
