--- a/css/style.css
+++ b/css/style.css
@@ -962,7 +962,7 @@ footer .footer__container__list ul {
   }
   .process #vimeo {
     width: 380px;
-    height: 300px;
+    height: 223px;
   }
   .services {
     height: 100%;
@@ -1007,6 +1007,62 @@ footer .footer__container__list ul {
   }
   .testimonials__companies img {
     width: 100px;
+  }
+  .contact__container {
+    text-align: center;
+  }
+  .contact__container__form form {
+    width: 380px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .contact__container__form form div {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact__container__form form div input {
+    width: 360px;
+    padding-right: 0;
+  }
+  .contact__container__form form input {
+    width: 360px;
+    padding-right: 0;
+  }
+  .contact__container__form form button {
+    width: 300px;
+  }
+  footer {
+    padding: 0;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 200px 200px;
+        grid-template-columns: 200px 200px;
+    -ms-grid-rows: 100px 100px;
+        grid-template-rows: 100px 100px;
+    gap: 25px;
+        grid-template-areas: ". ." ". .";
+    font-size: 12px;
+    text-align: center;
+  }
+  footer .footer__container {
+    height: 50px;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+  footer .footer__container__list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .modal {
     width: 400px;
