--- a/css/style.scss
+++ b/css/style.scss
@@ -854,7 +854,7 @@ footer {
         height: 100%;
         #vimeo {
             width: 380px;
-            height: 300px;
+            height: 223px;
         }
     }
 
@@ -901,6 +901,61 @@ footer {
             img {
                 width: 100px;
             }
+        }
+    }
+    
+    .contact {
+        &__container {
+            text-align: center;
+
+            &__form {
+                form {
+                    width: 380px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    div {
+                        flex-direction: column;
+                        input {
+                            width: 360px;
+                            padding-right: 0;
+                        }
+                    }
+                    
+                    input {
+                        width: 360px;
+                        padding-right: 0;
+                    }
+                    
+                    button {
+                        width: 300px;
+                    }
+                }
+            }
+        }
+    }
+
+    footer {
+        padding: 0;
+        display: grid;
+        grid-template-columns: 200px 200px;
+        grid-template-rows: 100px 100px;
+        gap: 25px;
+        grid-template-areas:
+            ". ."
+            ". .";
+
+        font-size: 12px;
+        text-align: center;
+
+        .footer__container {
+            height: 50px;
+            justify-content: start;
+        }
+
+        .footer__container__list {
+            justify-content: center;
         }
     }
 
